# merton-market-maker

./: .env.example  .gitignore  .python-version  README.md  jump_diff.ipynb  merton.ipynb  profitview_merton_signal.py  requirements.txt
cpp/: .merton-build.env.example  BUILD.md  CMakeLists.txt  Dockerfile  README.md  THEORY.md  justfile  merton-clang++  pytest.ini  toolchain-p2996.cmake
cpp/include/: merton_online_calibrator.hpp  reflection_accessors.hpp  reflection_bind_nanobind.hpp  reflection_bind_pybind11.hpp  reflection_engine.hpp
cpp/src/: merton_online_calibrator.cpp  python_module_entry.cpp  python_module_entry_nanobind.cpp  python_module_entry_pybind11.cpp
cpp/tests/: conftest.py  test_init.py  test_params.py  test_pricing.py
